--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,394 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: 'Exo 2', sans-serif;
+    transition: all .2s linear;
+}
+html{
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+}
+/* body{
+    background: linear-gradient(rgb(32, 191, 85), rgb(32, 164, 243), rgb(11, 79, 108));
+}  */
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;    
+  }
+  .nav_1{
+      background-color: rgb(80, 69, 69) !important;
+      color: #fff!important ;
+  }
+  .text1:hover{
+      color: #000 !important;
+      border-bottom: 2px red !important;
+      background-color: rgb(80, 69, 69) !important;
+
+  }
+  .nav_1:focus{
+    background-color: rgb(80, 69, 69) !important;
+    color: #fff!important ;
+  }
+
+h1{
+    font-size: 3rem;
+       text-align: center;
+       color: #333;
+       margin: 3rem 0;
+       padding-top: 5.5rem;
+       padding-bottom: 1rem;
+       position: relative;
+   }
+   h1::after{
+       content:'';
+       position:absolute;
+       bottom: -.5rem;
+       left: 50%;
+       transform: translateX(-50%);
+       height: 0.2rem;
+       width: 5rem;
+       background-color: #333;
+     
+   }
+   h1:hover{
+    transform: translateY(-20px);
+   }
+
+.type-wrap h2{
+    font-size: 3rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.span_1{
+    color: rgb(58, 47, 47);
+    margin: 0;
+    
+}
+.home{
+    margin-top: 5rem;
+    transition: 0.5s all ease;
+    height: 100%;
+    width: 75%;
+    background-color: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter:blur(4px);
+    border-radius: 10px;
+}
+.home p{
+    color: rgb(58, 47, 47);
+    line-height: 1.6;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.image{
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+    margin-left: 8rem;
+    max-width: 80%;
+    height: auto;
+    clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+}
+
+.box-container img{
+    width: 6rem;
+    height: 6rem;
+    padding-bottom: 2rem;
+}
+.box-container{
+       display: flex;
+       justify-content: center;
+       flex-wrap: wrap;
+        height: 100%;
+        margin-left:5rem;
+        width: 90%;
+        background-color: rgba(255, 255, 255, 0.25);
+        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter:blur(4px);
+        border-radius: 10px;
+
+}
+
+.box{
+    height: 14rem;
+    width: 10rem;
+    background: #fff;
+    cursor: pointer;
+    text-align: center;
+    padding-top: 3rem;
+    margin: 2rem;
+    border-radius: .5rem;
+    transition: transform 0.5s;
+}
+
+
+.box-container h5{
+   padding-bottom: 1rem;
+   color: #333;
+}
+.box:hover{
+    background-color: rgb(175, 159, 159);
+    transform: translateY(-20px);
+    border-radius:15px 2px;
+}
+ 
+ .box h5:hover{
+    color: #fff;
+ }
+ 
+ .box-container img:hover{
+   filter: invert(1);
+ }
+
+
+.experience{
+    background-color: rgb(58, 47, 47);
+    border-radius: 10px;
+}
+
+.experience h1{
+    font-size: 3rem;
+       text-align: center;
+       color: #fff;
+       margin: 3rem 0;
+       padding-top: .5rem;
+       padding-bottom: 2rem;
+       position: relative;
+   }
+   .experience h1::after{
+       content:'';
+       position:absolute;
+       bottom: -.5rem;
+       left: 50%;
+       transform: translateX(-50%);
+       height: 0.2rem;
+       width: 5rem;
+       background-color: #fff;
+       margin-bottom: .5rem;
+    
+   }
+
+.box_1{
+    height: 33rem;
+    width: 100%;
+    padding-left: 2.5rem;
+    padding-bottom: 2.5rem;
+    border-left: .1rem solid #fff;
+    position: relative;
+}
+.box_1::after{
+    content:'';
+    position: absolute;
+    top: .5rem;
+    left: -1rem;
+    height: 2rem;
+    width: 2rem;
+    background: #fff;
+    border-radius: 5rem;
+}
+.box_1 p{
+    position: relative;
+}
+.box_1 p::after{
+    content:'';
+    position: absolute;
+    top: .8rem;
+    left: -1rem;
+    height: .5rem;
+    width: .5rem;
+    background: #fff;
+    border-radius: 5rem;
+}
+.year{
+    color: #fff;
+    font-size: 1.5rem;
+}
+.box_1 h3{
+    font-size:2rem;
+    color: yellow;
+    margin: 1rem 0;
+}
+.box_1 p{ 
+    color: #ccc;
+    font-size: 1.3rem;
+}
+.image_2{
+        width: 1.5rem;
+        height: 1.5rem;
+        padding-right: 0.4rem;
+}
+
+.info-box span{
+    padding-left: 1rem;
+    font-size: 2rem;
+    line-height: 1.6;
+}
+
+.info-box:hover{
+    color:coral;
+}
+
+.image_5{
+    border-radius: 2rem;
+    transition: transform .5s;
+}
+
+.image_5:hover{
+    transform: scale(1.5); 
+}
+.projects_1{
+    padding: 3rem;
+}
+.projects_1 p{
+    font-size: 1.3rem;
+    text-align:center;
+}
+.projects_1 h4{
+    font-size: 2rem;
+    text-align:center;
+    padding-top: 1rem;
+    color:rgb(58, 47, 47);
+}
+.btn{
+  color:rgb(58, 47, 47);
+}
+.btn:hover{
+    color: #fff;
+}
+.image_3{
+    width: 2rem;
+    height: 2rem;
+    display: inline-block;
+    transition: 0.2s;
+}
+ul{
+    position: relative;
+    display:flex;
+}
+ul li{
+    list-style:none;
+    margin:1rem;
+}
+.image_3:hover,
+.image_3:focus {
+  filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%);
+}
+.vector_2{
+    width:70%;
+    padding: 0 0 3rem 2rem;
+
+}
+.vector_3{
+    width:70%;
+    padding: 0 0 3rem 2rem;
+    display:none;
+
+}
+footer{
+    background-color: rgb(58, 47, 47);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem; 
+}
+  
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .image{
+        max-width: 60%;
+ }
+ .box-container{
+    margin-left: 2rem;
+ }
+ .vector_2{
+  display:none;
+
+}
+.vector_3{
+    display:block;
+    padding: 0 0 0 8rem;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media (min-width:600px) and (max-width:686px) {
+    .box-container{
+        margin-left: 1.7rem;
+     }
+     .vector_2{
+        display:none;
+      }
+      .vector_3{
+        display:block;
+        padding: 0 0 0 10rem;
+      }
+      .image{
+        max-width: 60%;
+        margin-left: 10rem;
+ }
 }
 
-.App-link {
-  color: #61dafb;
+@media (min-width:686px) and (max-width:768px) {
+    .image{
+        max-width: 80%;
+        margin-left: 4rem;
+ }
+ .home{
+    width: 80%;
+ }
+ .vector_2{
+    display:none;
+  }
+  .vector_3{
+    display:block;
+  }
+  .info-box span{
+    font-size: 2rem;
+}
+.image_2{
+    width: 1.5rem;
+    height: 1.5rem;
+}
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width:768px) and (max-width:992px) {
+    .image{
+        max-width: 80%;
+        margin-left: 3rem;
+ }
+ .vector_2{
+    display:none;
   }
-  to {
-    transform: rotate(360deg);
+  .vector_3{
+    display:block;
   }
 }
+
+
+@media (min-width:992px) and (max-width:1200px) {
+    .image{
+        max-width: 80%;
+        margin-left: 2.5rem;
+ }
+ .vector_2{
+    display:none;
+  }
+  .vector_3{
+    display:block;
+  }
+  .image_2{
+    width: 1.8rem;
+    height: 1.8rem;
+    padding-right: 0.4rem;
+}
+}
+
+   
