--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ html{
       color: #fff!important ;
   }
   .text1:hover,:focus{
-      color: #000 !important;
+      color: rgb(228, 74, 74) !important;
       background-color: rgb(80, 69, 69) !important;
 
   }
@@ -184,6 +184,7 @@ h1{
     background-color: rgb(58, 47, 47);
     border-radius: 10px;
     margin-top: 8rem;
+    padding: 0px 4rem;
 }
 
 .experience h1{
@@ -273,17 +274,17 @@ h1{
  
 }
 
-.projects, .experience, .home{
+.projects, .experience, .home, .contact{
     margin-bottom: 10rem;
 }
 .projects_1{
     padding: 3rem;
-  
+   
 }
 .projects_1 p{
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     text-align:center;
-    margin-top: 2rem;
+    margin-top: 0.8rem;
 }
 .projects_1 h4{
     font-size: 2rem;
@@ -334,8 +335,23 @@ footer{
     height: 2.5rem; 
     padding: 2rem 0 4rem 0;
 }
+.navbar{
+    background:  rgb(58, 47, 47) !important;
+}
+@media only screen and (max-width: 374px) {
+    .box{
+        
+        height: 12rem;
+        width: 10rem;
+        margin: 2rem;
+    }
+}
 
-
+@media only screen and (max-width: 400px) {
+        .main-nav{
+            display:none;
+        }
+}
 @media only screen and (min-width: 300px) {
     .image_second{
         display: block;
@@ -350,6 +366,9 @@ footer{
 }
 .experience{
     width:90%;
+}
+.main-nav{
+    display:none;
 }
 }
 
@@ -371,7 +390,9 @@ footer{
      max-width: 80%;
         margin-left: 2.5rem;
  }
-
+ .main-nav{
+    display:none;
+}
 }
 
 
@@ -390,6 +411,9 @@ footer{
     display:block;
     padding: 0 0 0 8rem;
   }
+  .main-nav{
+    display:none;
+}
 }
 
 @media (min-width:600px) and (max-width:686px) {
@@ -407,7 +431,11 @@ footer{
         max-width: 60%;
         margin-left: 10rem;
  }
+ .main-nav{
+    display:none;
 }
+}
+
 
 @media (min-width:686px) and (max-width:768px) {
     .image{
@@ -430,10 +458,13 @@ footer{
     width: 1.5rem;
     height: 1.5rem;
 }
-  
+.main-nav{
+    display:none;
 }
 
-@media (min-width:768px) and (max-width:992px) {
+}
+
+@media (min-width:769px) and (max-width:992px) {
     .image{
         max-width: 80%;
         margin-left: 3rem;
@@ -463,6 +494,12 @@ footer{
 .box-container{
     margin-left: 3.5rem;
 }
+.nav_2{
+    display:none;
+}
+.main-nav{
+    display:block;
+}
 }
 
 
@@ -481,6 +518,12 @@ footer{
     width: 1.8rem;
     height: 1.8rem;
     padding-right: 0.4rem;
+}
+.nav_2{
+    display:none;
+}
+.main-nav{
+    display:block;
 }
 }
 @media (min-width:1024px) and (max-width:1200px) {
@@ -502,6 +545,12 @@ footer{
  .experience{
     margin-top: 9rem !important;
 }
+.nav_2{
+    display:none;
+}
+.main-nav{
+    display:block;
+}
 }
 
 @media (min-width:1200px) and (max-width:1500px) {
@@ -517,4 +566,12 @@ footer{
   .vector_3{
     display:block;
   }
+  .nav_2{
+    display:none;
 }
+.main-nav{
+    display:block;
+}
+}
+
+
