--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,20 @@ h1{
     margin-top: 8rem;
     padding: 0px 4rem;
 }
-
+.mail{
+    color: rgb(58, 47, 47);
+    text-decoration: none;
+}
+.mail:hover{
+    text-decoration: none;
+    color: coral;
+}
+.mail:active {
+    color: rgb(58, 47, 47);
+  }
+  .mail:visited {
+    color: white;
+  }
 .experience h1{
     font-size: 3rem;
        text-align: center;
