--- a/src/App.css
+++ b/src/App.css
@@ -286,6 +286,9 @@ h1{
     border-radius: 2rem;
  
 }
+.pandar{
+    width: 92%;
+}
 
 .projects, .experience, .home, .contact{
     margin-bottom: 10rem;
